# co-writer

./: README.md
pick_and_place_voice/: package.xml  setup.cfg  setup.py
pick_and_place_voice/config/jamo/: a.yaml  ae.yaml  b.yaml  bb.yaml  ch.yaml  d.yaml  dd.yaml  e.yaml  eo.yaml  eu.yaml  g.yaml  gg.yaml  h.yaml  i.yaml  j.yaml  jj.yaml  k.yaml  m.yaml  n.yaml  ng.yaml  o.yaml  oe.yaml  p.yaml  r.yaml  s.yaml  ss.yaml  t.yaml  u.yaml  ui.yaml  wa.yaml  wae.yaml  we.yaml  wi.yaml  wo.yaml  ya.yaml  yae.yaml  ye.yaml  yeo.yaml  yo.yaml  yu.yaml
pick_and_place_voice/gui/: writing_gui.py
pick_and_place_voice/launch/: draw_robot_launch.py
pick_and_place_voice/object_detection/: detection.py  ocr_matcher_node.py  realsense.py  train.ipynb  yolo.py
pick_and_place_voice/resource/: T_gripper2camera.npy  class_name_tool.json  data.yaml  hello_rokey_8332_32.tflite
pick_and_place_voice/robot_control/: coordinate_utils.py  onrobot.py  robot_draw_fsm.py
pick_and_place_voice/voice_processing/: MicController.py  get_keyword.py  stt.py  wakeup_word.py
pick_and_place_voice/word_trajectory/: char_assemble3.py  config_vis.py  visual.py
